samples/_failures_safe/1761710312_32bbfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c6b2b9.c: In function ‘main’:
./samples/SAFE/__tmp_54c6b2b9.c:158:17: error: expected expression at end of input
  158 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_54c6b2b9.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54c6b2b9.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54c6b2b9.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54c6b2b9.c:158:17: error: expected declaration or statement at end of input
